--- a/README
+++ b/README
@@ -28,7 +28,7 @@ AUTHOR
     Christian Loos <cloos@netsandbox.de>
 
 COPYRIGHT AND LICENCE
-    Copyright (C) 2010, Christian Loos.
+    Copyright (C) 2010-2011, Christian Loos.
 
     This library is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
