--- a/Changes
+++ b/Changes
@@ -2,9 +2,17 @@ Revision history for Perl module RT::Extension::HistoryFilter
 
 1.00 2013-10-22
 
-0.03 2011-05-21
+    * RT 4.2 compatibility
+
+0.03 2011-05-20
+
+    * RT 4.0 compatibility
 
 0.02 2010-06-13
 
     * First version released to CPAN
+    * update MANIFEST and MANIFEST.SKIP
 
+0.01 2010-05-31
+
+    * initial release
