--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Perl module RT::Extension::HistoryFilter
 
 1.00 2013-10-22
 
+    * update select widget
     * RT 4.2 compatibility
 
 0.03 2011-05-20
