update installation instructions

--- a/README
+++ b/README
@@ -18,13 +18,18 @@ INSTALLATION
     perl Makefile.PL
     make
     make install
+        May need root permissions
+
     Edit your /opt/rt4/etc/RT_SiteConfig.pm
-        Add this line:
+        If you are using RT 4.2 or greater, add this line:
+
+            Plugin('RT::Extension::HistoryFilter');
+
+        For RT 4.0, add this line:
 
             Set(@Plugins, qw(RT::Extension::HistoryFilter));
 
-        or add "RT::Extension::HistoryFilter" to your existing @Plugins
-        line.
+        or add RT::Extension::HistoryFilter to your existing @Plugins line.
 
     Clear your mason cache
             rm -rf /opt/rt4/var/mason_data/obj/*
@@ -35,7 +40,7 @@ AUTHOR
     Christian Loos <cloos@netsandbox.de>
 
 LICENCE AND COPYRIGHT
-    Copyright (C) 2010-2013, Christian Loos.
+    Copyright (C) 2010-2014, Christian Loos.
 
     This library is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
