--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for RT::Extension::HistoryFilter
 
+3.01 2021-01-17
+ - Generate pot file for further translations
+ - Add french translation
+ - update Module::Install for RT 5.0 compatibility
+
 2.03 2018-09-30
  - Fix affecting on Assets, User, Groups history page
  - update Module::Install and friends
