--- a/README
+++ b/README
@@ -31,6 +31,14 @@ INSTALLATION
 
         or add RT::Extension::HistoryFilter to your existing @Plugins line.
 
+    For RT 4.2.3 or older, install a patch
+        This step is required only for RT versions 4.2.3 or older. Versions
+        4.2.4 and newer have the changes included in the patch.
+
+        Apply the patch as follows:
+
+            patch -p1 -d /path/to/rt < patches/select-widget-add-multiple.patch
+
     Clear your mason cache
             rm -rf /opt/rt4/var/mason_data/obj/*
 
